--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "lint:md": "markdownlint-cli2 --config .markdownlint.json --fix \"src/(features/|global/components)/**/!(README).md\"",
     "lint:prettier": "prettier --write --loglevel error \"**/*.{js,ts,json,css,scss,vue,html,md}\"",
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "husky install && chmod ug+x .husky/*",
+    "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXpostinstall": "husky install && chmod ug+x ../.husky/*",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "sec-audit": "run-p sec-audit:*",
@@ -74,7 +74,6 @@
     "markdown-it-prism": "^2.2.1",
     "markdownlint-cli2": "^0.3.2",
     "npm-run-all": "^4.1.5",
-    "pnpm": "^6.23.6",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
