fix: placeholder test config while waiting for vitest

--- a/app/package.json
+++ b/app/package.json
@@ -20,16 +20,14 @@
     "sec-audit:dev": "pnpm audit --json --dev",
     "sec-audit:prod": "pnpm audit --json --prod",
     "sec-audit:force:fix": "pnpm audit --fix",
-    "test:ci": "run-p test:ci:*",
-    "test:ci:components": "cypress run-ct",
-    "test:ci:e2e": "cypress run --headless",
-    "test:local": "run-p test:local:*",
-    "test:local:components": "cypress open-ct",
-    "test:local:e2e": "cypress open"
+    "XXXtest:ci": "run-p test:ci:*",
+    "XXXtest:ci:components": "cypress run-ct",
+    "XXXtest:ci:e2e": "cypress run --headless",
+    "XXXtest:local": "run-p test:local:*",
+    "XXXtest:local:components": "cypress open-ct",
+    "XXXtest:local:e2e": "cypress open"
   },
   "dependencies": {
-    "@cypress/vite-dev-server": "^2.2.1",
-    "@cypress/vue": "^2.2.3",
     "@vueuse/core": "^6.9.2",
     "@vueuse/head": "^0.6.0",
     "nprogress": "^0.2.0",
@@ -44,6 +42,8 @@
     "@antfu/eslint-config": "^0.10.0",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@cypress/vite-dev-server": "^2.2.2",
+    "@cypress/vue": "^2.2.3",
     "@iconify-json/carbon": "^1.0.12",
     "@intlify/vite-plugin-vue-i18n": "^2.5.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
