--- a/app/package.json
+++ b/app/package.json
@@ -20,26 +20,26 @@
     "sec-audit:dev": "pnpm audit --json --dev",
     "sec-audit:prod": "pnpm audit --json --prod",
     "sec-audit:force:fix": "pnpm audit --fix",
-    "XXXtest:ci": "run-p test:ci:*",
-    "XXXtest:ci:components": "cypress run-ct",
-    "XXXtest:ci:e2e": "cypress run --headless",
-    "XXXtest:local": "run-p test:local:*",
-    "XXXtest:local:components": "cypress open-ct",
-    "XXXtest:local:e2e": "cypress open"
+    "test:ci": "run-p test:ci:*",
+    "test:ci:unit": "vitest",
+    "test:ci:e2e": "cypress run --headless",
+    "test:local": "run-p test:local:*",
+    "test:local:unit": "vitest",
+    "test:local:e2e": "cypress open"
   },
   "dependencies": {
     "@vueuse/core": "^6.9.2",
     "@vueuse/head": "^0.6.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.6",
+    "pinia": "^2.0.9",
     "prism-theme-vars": "^0.2.2",
-    "vue": "^3.2.24",
+    "vue": "^3.2.26",
     "vue-demi": "^0.11.4",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.10.0",
+    "@antfu/eslint-config": "^0.14.2",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@cypress/vite-dev-server": "^2.2.2",
@@ -48,13 +48,14 @@
     "@intlify/vite-plugin-vue-i18n": "^2.5.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^1.10.2",
-    "@vue/compiler-sfc": "^3.2.24",
-    "@vue/server-renderer": "^3.2.24",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "@vue/server-renderer": "^3.2.26",
+    "@vue/test-utils": "^1.3.0",
     "critters": "^0.0.14",
     "cross-env": "^7.0.3",
-    "cypress": "^9.1.1",
-    "eslint": "^8.4.1",
+    "cypress": "^9.2.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.3",
@@ -73,27 +74,29 @@
     "markdown-it-prism": "^2.2.1",
     "markdownlint-cli2": "^0.3.2",
     "npm-run-all": "^4.1.5",
+    "pnpm": "^6.24.4",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-import-sort": "^0.0.7",
-    "stylelint": "^14.1.0",
+    "stylelint": "^14.2.0",
     "stylelint-config-css-modules": "^2.3.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-recommended-vue": "^1.1.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "typescript": "^4.5.3",
-    "unplugin-auto-import": "^0.4.20",
+    "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.5",
     "unplugin-icons": "^0.12.23",
-    "unplugin-vue-components": "^0.17.9",
-    "vite": "^2.7.1",
+    "unplugin-vue-components": "^0.17.11",
+    "vite": "^2.7.9",
     "vite-plugin-inspect": "^0.3.11",
-    "vite-plugin-md": "^0.11.4",
+    "vite-plugin-md": "^0.11.7",
     "vite-plugin-pages": "^0.18.2",
-    "vite-plugin-pwa": "^0.11.11",
+    "vite-plugin-pwa": "^0.11.12",
     "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-plugin-windicss": "^1.5.4",
-    "vite-ssg": "^0.15.6",
-    "vue-tsc": "^0.28.10"
+    "vite-plugin-windicss": "^1.6.1",
+    "vite-ssg": "^0.17.2",
+    "vitest": "^0.0.120",
+    "vue-tsc": "^0.30.1"
   }
 }
