--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,7 +19,7 @@
     "strict": true,
     "strictNullChecks": true,
     "target": "es2016",
-    "types": ["vite/client", "vite-plugin-pages/client", "vite-plugin-vue-layouts/client"]
+    "types": ["cypress", "vite/client", "vite-plugin-pages/client", "vite-plugin-vue-layouts/client"]
   },
   "exclude": ["dist", "node_modules"]
 }
