feat: adding docker for tests

--- a/app/.npmrc
+++ b/app/.npmrc
@@ -2,3 +2,5 @@
 # Cf. https://pnpm.io/npmrc
 
 shamefully-hoist=true
+# cf. https://stackoverflow.com/questions/29349684/how-can-i-specify-the-required-node-js-version-in-package-json#29349773
+engine-strict=true
