--- a/app/package.json
+++ b/app/package.json
@@ -23,10 +23,10 @@
     "test:ci": "run-p test:ci:*",
     "test:ci:unit": "vitest",
     "test:ci:e2e": "cypress run --headless",
-    "test:docker": "docker run -it --rm -v $(pwd):/opt/my_app my_app_dev:latest $1" ,
-    "test:docker:unit": "pnpm test:docker test:local:unit" ,
-    "test:docker:e2e": "pnpm test:docker test:local:e2e" ,
-    "test:local": "run-p test:local:*",
+    "test:docker": "docker run -it --rm -v $(pwd):/opt/my_app my_app_dev:latest $1",
+    "test:docker:unit": "pnpm test:docker test:local:unit",
+    "test:docker:e2e": "pnpm test:docker test:local:e2e",
+    "test:local": "run-s test:local:*",
     "test:local:unit": "vitest",
     "test:local:e2e": "cypress open"
   },
@@ -100,6 +100,7 @@
     "vite-plugin-windicss": "^1.6.1",
     "vite-ssg": "^0.17.2",
     "vitest": "^0.0.120",
+    "vue-i18n-extract": "^2.0.4",
     "vue-tsc": "^0.30.1"
   },
   "engines": {
