feat: add extractor to the i18n system

--- a/app/package.json
+++ b/app/package.json
@@ -6,20 +6,21 @@
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "dev": "vite --port 3333 --open",
     "lint": "run-p lint:*",
-    "lint:types": "vue-tsc --noEmit",
     "lint:css": "stylelint --fix \"**/*.{css,scss,vue}\"",
-    "lint:js": "eslint --fix --ext \"**/*.{js,ts,vue}\"",
+    "lint:i18n": "pnpm exec vue-i18n-extract && pnpm exec vue-i18n-extract --remove",
     "lint:imports": "import-sort --write \"src/**/*{.js,.ts,.vue}\"",
+    "lint:js": "eslint --fix --ext \"**/*.{js,ts,vue}\"",
     "lint:md": "markdownlint-cli2 --config .markdownlint.json --fix \"src/(features/|global/components)/**/!(README).md\"",
     "lint:prettier": "prettier --write --loglevel error \"**/*.{js,ts,json,css,scss,vue,html,md}\"",
+    "lint:types": "vue-tsc --noEmit",
     "preinstall": "npx only-allow pnpm",
     "prepare": "cd .. && husky install && chmod ug+x .husky/*",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "sec-audit": "run-p sec-audit:*",
     "sec-audit:dev": "pnpm audit --json --dev",
-    "sec-audit:prod": "pnpm audit --json --prod",
     "sec-audit:force:fix": "pnpm audit --fix",
+    "sec-audit:prod": "pnpm audit --json --prod",
     "test:ci": "run-p test:ci:*",
     "test:ci:unit": "vitest",
     "test:ci:e2e": "cypress run --headless",
