--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@vueuse/core": "^6.9.2",
     "@vueuse/head": "^0.6.0",
+    "axios": "^0.24.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.9",
     "prism-theme-vars": "^0.2.2",
