chore: add words to dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,28 @@
 {
   "cSpell.words": [
+    "antfu",
     "automagically",
+    "commitlint",
+    "iconify",
     "intlify",
+    "loglevel",
+    "markdownlint",
     "noopener",
+    "nprogress",
     "pinia",
+    "pnpm",
+    "preinstall",
     "reactified",
+    "stylelint",
     "unplugin",
+    "vars",
     "Vite",
     "vitejs",
     "Vitesse",
+    "vitest",
     "vueuse",
     "Windi",
-    "windicss",
+    "windicss"
   ],
   "cSpell.language": "en-GB",
   "i18n-ally.keystyle": "nested",
