chore: update some texts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "intlify",
     "loglevel",
     "markdownlint",
+    "maskable",
     "noopener",
     "nprogress",
     "pinia",
@@ -18,7 +19,6 @@
     "vars",
     "Vite",
     "vitejs",
-    "Vitesse",
     "vitest",
     "vueuse",
     "Windi",
