chore: replace VScode's postcss syntax extension

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,7 @@
     "antfu.iconify",
     "dbaeumer.vscode-eslint",
     "voorjaar.windicss-intellisense",
-    "csstools.postcss",
+    "cpylua.language-postcss",
     "streetsidesoftware.code-spell-checker",
   ]
 }
