chore: replace run-p with run-s within package.json's scripts

--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production vite-ssg build",
     "dev": "vite --port 3333 --open",
-    "lint": "run-p lint:*",
+    "lint": "run-s lint:*",
     "lint:css": "stylelint --fix \"**/*.{css,scss,vue}\"",
     "lint:i18n": "pnpm exec vue-i18n-extract && pnpm exec vue-i18n-extract --remove",
     "lint:imports": "import-sort --write \"src/**/*{.js,.ts,.vue}\"",
@@ -17,11 +17,11 @@
     "prepare": "cd .. && husky install && chmod ug+x .husky/*",
     "preview": "vite preview",
     "preview-https": "serve dist",
-    "sec-audit": "run-p sec-audit:*",
+    "sec-audit": "run-s sec-audit:*",
     "sec-audit:dev": "pnpm audit --json --dev",
     "sec-audit:force:fix": "pnpm audit --fix",
     "sec-audit:prod": "pnpm audit --json --prod",
-    "test:ci": "run-p test:ci:*",
+    "test:ci": "run-s test:ci:*",
     "test:ci:unit": "vitest",
     "test:ci:e2e": "cypress run --headless",
     "test:docker": "docker run -it --rm -v $(pwd):/opt/my_app my_app_dev:latest $1",
